alignment of help bubble fixed

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -167,6 +167,7 @@ input, textarea, select
   background-color: $background-color
   border: 1px solid $stroke-color
   padding: 0.5em
+  font-size: 12px
   width: 25em
   box-sizing: content-box
   -moz-box-sizing: content-box
